--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,8 +74,7 @@ html {
   }
   main .inline .technologies,
   main .inline .logiciels,
-  main .inline .capacites,
-  main .inline .programmes {
+  main .inline .capacites {
     text-align: center;
     color: white;
     padding-left: 5px;
@@ -88,8 +87,7 @@ html {
   }
   main .inline .technologies h2,
   main .inline .logiciels h2,
-  main .inline .capacites h2,
-  main .inline .programmes h2 {
+  main .inline .capacites h2 {
     display: block;
     border-bottom: 2px white solid;
     width: 100%;
@@ -103,38 +101,32 @@ html {
   }
   main .inline .technologies .c,
   main .inline .logiciels .c,
-  main .inline .capacites .c,
-  main .inline .programmes .c {
+  main .inline .capacites .c {
     border: #4c85bd solid 5px;
   }
   main .inline .technologies .c:first,
   main .inline .logiciels .c:first,
-  main .inline .capacites .c:first,
-  main .inline .programmes .c:first {
+  main .inline .capacites .c:first {
     margin-bottom: 20px;
   }
   main .inline .technologies .c:last-child,
   main .inline .logiciels .c:last-child,
-  main .inline .capacites .c:last-child,
-  main .inline .programmes .c:last-child {
+  main .inline .capacites .c:last-child {
     margin-top: 20px;
   }
   main .inline .technologies span,
   main .inline .logiciels span,
-  main .inline .capacites span,
-  main .inline .programmes span {
+  main .inline .capacites span {
     display: flex;
   }
   main .inline .technologies span h3,
   main .inline .logiciels span h3,
-  main .inline .capacites span h3,
-  main .inline .programmes span h3 {
+  main .inline .capacites span h3 {
     display: inline;
   }
   main .inline .technologies h3,
   main .inline .logiciels h3,
-  main .inline .capacites h3,
-  main .inline .programmes h3 {
+  main .inline .capacites h3 {
     background-color: #4c85bd;
     color: white;
     margin: -15px;
@@ -149,15 +141,13 @@ html {
   }
   main .inline .technologies li,
   main .inline .logiciels li,
-  main .inline .capacites li,
-  main .inline .programmes li {
+  main .inline .capacites li {
     padding: 5px 0 5px 0;
     color: white;
   }
   main .inline .technologies li:nth-child(2n-1),
   main .inline .logiciels li:nth-child(2n-1),
-  main .inline .capacites li:nth-child(2n-1),
-  main .inline .programmes li:nth-child(2n-1) {
+  main .inline .capacites li:nth-child(2n-1) {
     background-color: rgba(0, 0, 12, 0.231372549);
     color: white;
   }
@@ -165,9 +155,7 @@ html {
   main .inline .logiciels a:link,
   main .inline .logiciels a:visited,
   main .inline .capacites a:link,
-  main .inline .capacites a:visited,
-  main .inline .programmes a:link,
-  main .inline .programmes a:visited {
+  main .inline .capacites a:visited {
     color: white;
     background-color: rgba(0, 0, 12, 0.3764705882);
     border-radius: 50px;
@@ -180,9 +168,75 @@ html {
   main .inline .logiciels a:link:hover,
   main .inline .logiciels a:visited:hover,
   main .inline .capacites a:link:hover,
-  main .inline .capacites a:visited:hover,
-  main .inline .programmes a:link:hover,
-  main .inline .programmes a:visited:hover {
+  main .inline .capacites a:visited:hover {
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
+  }
+  .programmes {
+    text-align: center;
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color: rgba(0, 0, 12, 0.3764705882);
+    border-bottom: 1px white solid;
+    border-left: 1px white solid;
+    border-right: 1px white solid;
+    border-radius: 5px 5px 5px 5px;
+    margin-top: 0;
+  }
+  .programmes h2 {
+    display: block;
+    border-bottom: 2px white solid;
+    width: 100%;
+    background-color: white;
+    border-radius: 0 0 50px 50px;
+    color: #00000C;
+    font-weight: bolder;
+    font-size: large;
+    padding: 5px 0 5px 0;
+    text-shadow: none;
+  }
+  .programmes h3 {
+    display: block !important;
+    background-color: transparent !important;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 1em;
+    padding-top: 20px;
+  }
+  .programmes h3:nth-child(2) {
+    padding-top: 0px;
+  }
+  .programmes h3 span {
+    margin: 10px;
+    background-color: #4c85bd;
+    padding: 8px;
+  }
+  .programmes .c {
+    border: #4c85bd solid 5px;
+  }
+  .programmes .c:first {
+    margin-bottom: 20px;
+  }
+  .programmes li {
+    padding: 5px 0 5px 0;
+    color: white;
+  }
+  .programmes li:nth-child(2n-1) {
+    background-color: rgba(0, 0, 12, 0.231372549);
+    color: white;
+  }
+  .programmes a:link, .programmes a:visited {
+    color: white;
+    background-color: rgba(0, 0, 12, 0.3764705882);
+    border-radius: 50px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-decoration: none;
+    transition: padding-left 0.5s;
+  }
+  .programmes a:link:hover, .programmes a:visited:hover {
     padding-left: 10px;
     padding-right: 10px;
     color: white;
@@ -204,7 +258,6 @@ html {
     border-top: rgba(0, 0, 12, 0.3764705882) solid 2px;
     border-bottom: rgba(0, 0, 12, 0.3764705882) solid 2px;
     text-align: center;
-    padding: 5px;
     background-color: white;
   }
   main .intro a {
@@ -238,8 +291,7 @@ html {
   }
   main .inline .technologies,
   main .inline .logiciels,
-  main .inline .capacites,
-  main .inline .programmes {
+  main .inline .capacites {
     color: white;
     padding-left: 5px;
     padding-right: 5px;
@@ -248,8 +300,7 @@ html {
   }
   main .inline .technologies h2,
   main .inline .logiciels h2,
-  main .inline .capacites h2,
-  main .inline .programmes h2 {
+  main .inline .capacites h2 {
     display: block;
     border-bottom: 2px white solid;
     width: 100%;
@@ -264,34 +315,29 @@ html {
   }
   main .inline .technologies .c,
   main .inline .logiciels .c,
-  main .inline .capacites .c,
-  main .inline .programmes .c {
+  main .inline .capacites .c {
     border: #4c85bd solid 5px;
   }
   main .inline .technologies .c:first,
   main .inline .logiciels .c:first,
-  main .inline .capacites .c:first,
-  main .inline .programmes .c:first {
+  main .inline .capacites .c:first {
     margin-bottom: 20px;
   }
   main .inline .technologies .c:last-child,
   main .inline .logiciels .c:last-child,
-  main .inline .capacites .c:last-child,
-  main .inline .programmes .c:last-child {
+  main .inline .capacites .c:last-child {
     margin-top: 20px;
   }
   main .inline .technologies span,
   main .inline .logiciels span,
-  main .inline .capacites span,
-  main .inline .programmes span {
+  main .inline .capacites span {
     display: flex;
     top: 5px;
     margin-top: 35px;
   }
   main .inline .technologies span h3,
   main .inline .logiciels span h3,
-  main .inline .capacites span h3,
-  main .inline .programmes span h3 {
+  main .inline .capacites span h3 {
     width: 36%;
     display: inline;
     font-size: 1em;
@@ -299,8 +345,7 @@ html {
   }
   main .inline .technologies h3,
   main .inline .logiciels h3,
-  main .inline .capacites h3,
-  main .inline .programmes h3 {
+  main .inline .capacites h3 {
     background-color: #4c85bd;
     color: white;
     margin: -15px;
@@ -315,24 +360,20 @@ html {
   }
   main .inline .technologies li,
   main .inline .logiciels li,
-  main .inline .capacites li,
-  main .inline .programmes li {
+  main .inline .capacites li {
     color: white;
     padding: 10px 0 10px 0;
   }
   main .inline .technologies li:nth-child(2n-1),
   main .inline .logiciels li:nth-child(2n-1),
-  main .inline .capacites li:nth-child(2n-1),
-  main .inline .programmes li:nth-child(2n-1) {
+  main .inline .capacites li:nth-child(2n-1) {
     background-color: rgba(0, 0, 12, 0.231);
   }
   main .inline .technologies a:link, main .inline .technologies a:visited,
   main .inline .logiciels a:link,
   main .inline .logiciels a:visited,
   main .inline .capacites a:link,
-  main .inline .capacites a:visited,
-  main .inline .programmes a:link,
-  main .inline .programmes a:visited {
+  main .inline .capacites a:visited {
     color: white;
     background-color: rgba(0, 0, 12, 0.3764705882);
     border-radius: 50px;
@@ -345,13 +386,74 @@ html {
   main .inline .logiciels a:link:hover,
   main .inline .logiciels a:visited:hover,
   main .inline .capacites a:link:hover,
-  main .inline .capacites a:visited:hover,
-  main .inline .programmes a:link:hover,
-  main .inline .programmes a:visited:hover {
+  main .inline .capacites a:visited:hover {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
+.programmes {
+  color: white;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: rgba(0, 0, 12, 0.3764705882);
+  line-height: 150%;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  display: flex;
+  top: 5px;
+  justify-content: center;
+}
+.programmes h2 {
+  display: block;
+  border-bottom: 2px white solid;
+  width: 100%;
+  background-color: white;
+  border-radius: 0 0 50px 50px;
+  color: #00000C;
+  font-weight: bolder;
+  font-size: larger;
+  text-align: center;
+  text-shadow: none;
+  padding: 5px 0 5px 0;
+}
+.programmes ul {
+  border: #4c85bd solid 5px;
+  margin: 0;
+}
+.programmes h3 {
+  font-size: 1em;
+  display: block !important;
+  background-color: transparent !important;
+  margin: 0;
+  color: white;
+}
+.programmes h3 span {
+  background-color: #4c85bd;
+  margin: 5px;
+  padding: 8px;
+}
+.programmes li {
+  color: white;
+  padding: 10px 0 10px 0;
+}
+.programmes li:nth-child(2n-1) {
+  background-color: rgba(0, 0, 12, 0.231);
+}
+.programmes a:link, .programmes a:visited {
+  color: white;
+  background-color: rgba(0, 0, 12, 0.3764705882);
+  border-radius: 50px;
+  padding-left: 5px;
+  padding-right: 5px;
+  text-decoration: none;
+  transition: padding-left 0.5s;
+}
+.programmes a:link:hover, .programmes a:visited:hover {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 /* Background data (Original source: https://subtlepatterns.com/grid-me/) */
 /* Animations */
 @keyframes bg-scrolling-reverse {
