--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -78,8 +78,7 @@ html {
             }
             .technologies,
             .logiciels,
-            .capacites,
-            .programmes {
+            .capacites {
                 text-align: center;
                 color: $C1;
                 padding-left: 5px;
@@ -158,8 +157,83 @@ display:inline;
             }
         }
     }
-}
+    .programmes{
+        text-align: center;
+        color: $C1;
+        padding-left: 5px;
+        padding-right: 5px;
+        background-color: $C3a;
+        border-bottom: 1px $C1 solid;
+        border-left: 1px $C1 solid;
+        border-right: 1px $C1 solid;
+        border-radius: 5px 5px 5px 5px;
+        margin-top: 0;
+        h2 {
+            display: block;
+            border-bottom: 2px $C1 solid;
+            width: 100%;
+            background-color: $C1;
+            border-radius: 0 0 50px 50px;
+            color:$C3;
+            font-weight: bolder;
+            font-size: large;
+padding: 5px 0 5px 0 ;
+text-shadow: none;
+        }
+        h3{
+            display: block !important;
+            background-color: transparent !important;
+margin-left:5px;
+margin-right:5px;
+font-size: 1em;
+padding-top:20px;
+&:nth-child(2){
+    padding-top: 0px;
+        }
 
+
+span{
+    margin:10px;
+    background-color: $C2;
+    padding:8px;
+}
+        }
+        .c{
+            border:$C2 solid 5px;
+            &:first{
+                margin-bottom:20px;
+            }
+        }
+      
+        li {
+            padding: 5px 0 5px 0 ;
+            color:$C1;
+                                &:nth-child(2n-1) {
+                background-color: #00000c3b;
+                color:$C1;
+            }
+        }
+        a {
+            &:link,
+            &:visited {
+                color: $C1;
+                background-color: $C3a;
+                border-radius: 50px;
+                padding-left: 5px;
+                padding-right: 5px;
+                text-decoration: none;
+                transition: padding-left 0.5s;
+                
+                &:hover {
+                    padding-left: 10px;
+                    padding-right: 10px;
+                    color:$C1;
+                }
+            }
+        }
+    }
+}
+        
 @media screen and (max-width: 1280px) {
     h1,
     h2 {
@@ -175,7 +249,6 @@ display:inline;
             border-top: $C3a solid 2px;
             border-bottom: $C3a solid 2px;
             text-align: center;
-            padding: 5px;
             background-color: $C1;
             a {
                 color: yellow;
@@ -208,8 +281,8 @@ display:inline;
             }
             .technologies,
             .logiciels,
-            .capacites,
-            .programmes {
+            .capacites
+             {
                 color: $C1;
                 padding-left: 5px;
                 padding-right: 5px;
@@ -245,7 +318,7 @@ padding: 5px 0 5px 0 ;
                         width: 36%;
 display:inline;
 font-size: 1em;
-top:5px
+top:5px;
                     }
                 }
                     h3{
@@ -289,6 +362,77 @@ top:5px
         }
     }
 }
+.programmes{
+    color: $C1;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color: $C3a;
+    line-height: 150%;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    h2 {
+display: block;
+        border-bottom: 2px $C1 solid;
+        width: 100%;
+        background-color: $C1;
+        border-radius: 0 0 50px 50px;
+        color:$C3;
+        font-weight: bolder;
+        font-size: larger;
+        text-align: center;
+        text-shadow: none;
+padding: 5px 0 5px 0 ;
+    }
+    ul{
+        border:$C2 solid 5px;
+        margin: 0;
+
+    }
+
+        display: flex;
+        top:5px;
+
+        justify-content: center;
+        h3{
+            
+font-size: 1em;
+display: block !important;
+background-color: transparent !important;
+margin:0;
+color: $C1;
+span{
+    background-color: #4c85bd;
+    margin:5px;
+    padding:8px;
+}
+        }
+    
+    li {
+        color:$C1;
+        padding: 10px 0 10px 0 ;
+        &:nth-child(2n-1) {
+            background-color: rgba(0, 0, 12, 0.231);
+        }
+    }
+    a {
+        &:link,
+        &:visited {
+            color: $C1;
+            background-color: $C3a;
+            border-radius: 50px;
+            padding-left: 5px;
+            padding-right: 5px;
+            text-decoration: none;
+            transition: padding-left 0.5s;
+            &:hover {
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+        }
+    }
+}
+
 
 // BG Anim
 
