--- a/assets/cv/CV_CSS/EdS.scss
+++ b/assets/cv/CV_CSS/EdS.scss
@@ -10,17 +10,21 @@ $C5:rgb(100, 100, 100);
     }
     main{
         font-size:1.1em;
-                display: grid;
+                display: flex;
         @media screen and (orientation: landscape) {
-                        grid-template-columns: 1fr 1fr;
-            section{
-                width:75%;
-            }
+                       flex-direction: column;
+                       align-items: center;
+                       justify-content: center;
+                       gap: 1em;
+section{
+    width:50vw;
+}
                     }
         @media screen and (orientation: portrait) {
-                            grid-template-columns: 1fr;
+            flex-direction: column;  align-items: center;
+            justify-content: center;
             section{
-                width:90%;
+                width:100vw;
                 margin-bottom:10px;
             }
                         }
@@ -32,14 +36,14 @@ $C5:rgb(100, 100, 100);
         text-transform: uppercase;
         font-size:50px;
         margin:0;
-
+padding:5px;
     }
     h2{
         text-align:right;
         font-weight: lighter;
         font-size: 20px;
                 margin:0;
-
+                padding:5px;
     }
     h3{
         text-align: center;
@@ -75,16 +79,22 @@ $C5:rgb(100, 100, 100);
 
 .Coordonnees{
     text-align: center;
-    li>a{
-        &:link{
-            color:#4c85bd;
+    a{
+        &:link,&:visited{
+            color:$C2;
             text-decoration: underline;
             text-align: center;
+            font-weight: bolder;
+            background-color: #000000;
+            padding-left: 10px;
+            padding-right: 10px;
+            border-radius: 50px;
             &:hover{
-                color:#ffffff; 
-            }
+                color:#000000;
+                background-color: white; 
+            }}
         }
-    }
+    
 p{
     background-color:rgba(255, 0, 0, 0.493);
     text-align: center;
