--- a/assets/css/porte-folio.css
+++ b/assets/css/porte-folio.css
@@ -62,6 +62,11 @@ h2 {
   border-radius: 50px 50px 50px 50px;
   text-align: center;
 }
+@media screen and (max-width: 1280px) {
+  .artstation img {
+    width: 90%;
+  }
+}
 
 .Behance {
   background-color: rgb(255, 255, 255);
