--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,589 +13,80 @@ html {
     scroll-behavior: smooth;
 }
 
-.lien_magique {
-    color: yellow;
-    background-color: $C3;
-    border-radius: 25%;
-    padding:5px;
-    &:hover {
-        color: yellow;
-        text-decoration: none;
-        text-shadow: 0px 0px 1px rgba(95, 81, 81, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow !important;
-    }
+
+h1{
+    background-color: $C1;
+    color:$C2;
+    text-align: center;
+    padding:10px;
 }
 
-// Le main
-@media screen and (min-width: 1280px) {
-    h1,
-    h2 {
-        color: white;
-        font-family: 'Oswald', sans-serif;
-        text-align: center;
-        font-size: 3vw;
-        text-shadow: $C3 0 1px 0;
-    }
-    main {
-        color: $C3;
-        .intro {
-            border-top: $C3a solid 2px;
-            border-bottom: $C3a solid 2px;
-            box-shadow: $C3a 2px 2px 2px;
-            padding: 20px;
-            text-align: center;
-            margin-bottom: 20px;
-            background-color: $C1;
+h2{
+    color:$C1;
+    text-align: center;
+    padding:10px;
 
-            a {
-                color: yellow;
-                background-color: $C3;
-                border-radius: 25%;
-                padding:5px;
-                &:hover {
-                    text-decoration: none;
-                    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow;
-                }
-            }
-        }
-        .inline {
-            display: grid;
-            grid-gap: 5px;
-            grid-template-columns: auto auto;
-            margin: 5px;
-            text-align: center;
-            color:$C1;
-            ul {
-                text-align: center;
-                list-style-type: none;
-                padding:0;
-                .li {
-                    color: $C1;
-                    background-color: $C3;
-                    border-radius: 50px;
-                    padding-left: 5px;
-                    padding-right: 5px;
-                }
-            }
-            .technologies,
-            .logiciels,
-            .capacites {
-                text-align: center;
-                color: $C1;
-                padding-left: 5px;
-                padding-right: 5px;
-                background-color: $C3a;
-                border-bottom: 1px $C1 solid;
-                border-left: 1px $C1 solid;
-                border-right: 1px $C1 solid;
-                border-radius: 5px 5px 5px 5px;
-                h2 {
-                    display: block;
-                    border-bottom: 2px $C1 solid;
-                    width: 100%;
-                    background-color: $C1;
-                    border-radius: 0 0 50px 50px;
-                    color:$C3;
-                    font-weight: bolder;
-                    font-size: large;
-padding: 5px 0 5px 0 ;
-text-shadow: none;
-                }
-                .c{
-                    border:$C2 solid 5px;
-                    &:first{
-                        margin-bottom:20px;
-                    }
-                    &:last-child{
-                        margin-top:20px;
-                    }
-                }
-                span{
-                    display: flex;
-                    h3{
-display:inline;
-                    }
-                }
-                    h3{
-                        background-color: $C2;
-                        color:$C1;
-                        margin: -15px;
-                        padding:5px;
-                        text-align: center;
-                        display: block;
-                        position: relative;
-                        width: 236px;
-                        top: 5px;
-                        left: 15px;
-                        border-top-right-radius: 20%;    
-                    }
-                li {
-                    padding: 5px 0 5px 0 ;
-                    color:$C1;
-                                        &:nth-child(2n-1) {
-                        background-color: #00000c3b;
-                        color:$C1;
-                    }
-                }
-                a {
-                    &:link,
-                    &:visited {
-                        color: $C1;
-                        background-color: $C3a;
-                        border-radius: 50px;
-                        padding-left: 5px;
-                        padding-right: 5px;
-                        text-decoration: none;
-                        transition: padding-left 0.5s;
-                        
-                        &:hover {
-                            padding-left: 10px;
-                            padding-right: 10px;
-                            color:$C1;
-                        }
-                    }
-                }
-            }
-        }
-    }
-    .programmes{
-        text-align: center;
-        color: $C1;
-        padding-left: 5px;
-        padding-right: 5px;
-        background-color: $C3a;
-        border-bottom: 1px $C1 solid;
-        border-left: 1px $C1 solid;
-        border-right: 1px $C1 solid;
-        border-radius: 5px 5px 5px 5px;
-        margin-top: 0;
-        h2 {
-            display: block;
-            border-bottom: 2px $C1 solid;
-            width: 100%;
-            background-color: $C1;
-            border-radius: 0 0 50px 50px;
-            color:$C3;
-            font-weight: bolder;
-            font-size: large;
-padding: 5px 0 5px 0 ;
-text-shadow: none;
-        }
-        h3{
-            display: block !important;
-            background-color: transparent !important;
-margin-left:5px;
-margin-right:5px;
-font-size: 1em;
-padding-top:20px;
-&:nth-child(2){
-    padding-top: 0px;
-        }
+}
+.intro{
+    background-color: $C1;
+    padding:10px;
 
-
-span{
-    margin:10px;
-    background-color: $C2;
-    padding:8px;
 }
-        }
-        .c{
-            border:$C2 solid 5px;
-            &:first{
-                margin-bottom:20px;
-            }
-        }
-      
-        li {
-            padding: 5px 0 5px 0 ;
-            color:$C1;
-                                &:nth-child(2n-1) {
-                background-color: #00000c3b;
-                color:$C1;
-            }
-        }
-        a {
-            &:link,
-            &:visited {
-                color: $C1;
-                background-color: $C3a;
-                border-radius: 50px;
-                padding-left: 5px;
-                padding-right: 5px;
-                text-decoration: none;
-                transition: padding-left 0.5s;
-                
-                &:hover {
-                    padding-left: 10px;
-                    padding-right: 10px;
-                    color:$C1;
-                }
-            }
-        }
-    }
-}
-        
-@media screen and (max-width: 1280px) {
-    h1,
-    h2 {
-        color: white;
-        font-family: 'Oswald', sans-serif;
-        text-align: center;
-        font-size: 6vw;
-        text-shadow: $C3 0 1px 0;
-    }
-    main {
-        color: $C3;
-        .intro {
-            border-top: $C3a solid 2px;
-            border-bottom: $C3a solid 2px;
-            text-align: center;
-            background-color: $C1;
-            a {
-                color: yellow;
-                background-color: $C3;
-                border-radius: 25%;
-                padding:5px;
-                &:hover {
-                    text-decoration: none;
-                    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow;
-                }
-            }
-        }
-        .inline {
-            display: grid;
-            text-align: center;
-            grid-gap: 5px;
-            grid-template-columns: auto;
-            margin: 5px;
-            ul {
-                padding:0;
-                text-align: center;
-                list-style-type: none;
-                .li {
-                    color: $C1;
-                    background-color: $C3;
-                    border-radius: 50px;
-                    padding-left: 5px;
-                    padding-right: 5px;
-                }
-            }
-            .technologies,
-            .logiciels,
-            .capacites
-             {
-                color: $C1;
-                padding-left: 5px;
-                padding-right: 5px;
-                background-color: $C3a;
-                line-height: 150%;
-                h2 {
-                    display: block;
-                    border-bottom: 2px $C1 solid;
-                    width: 100%;
-                    background-color: $C1;
-                    border-radius: 0 0 50px 50px;
-                    color:$C3;
-                    font-weight: bolder;
-                    font-size: larger;
-                    text-align: center;
-                    text-shadow: none;
-padding: 5px 0 5px 0 ;
-                }
-                .c{
-                    border:$C2 solid 5px;
-                    &:first{
-                        margin-bottom:20px;
-                    }
-                    &:last-child{
-                        margin-top:20px;
-                    }
-                }
-                span{
-                    display: flex;
-                    top:5px;
-                    margin-top: 35px;
-                    h3{
-                        width: 36%;
-display:inline;
-font-size: 1em;
-top:5px;
-                    }
-                }
-                    h3{
-                        background-color: $C2;
-                        color:$C1;
-                        margin: -15px;
-                        padding:5px;
-                        text-align: center;
-                        display: block;
-                        position: relative;
-                        width: 236px;
-                        top: 5px;
-                        left: 15px;
-                        border-top-right-radius: 20%;    
-                    }
-                
-                li {
-                    color:$C1;
-                    padding: 10px 0 10px 0 ;
-                    &:nth-child(2n-1) {
-                        background-color: rgba(0, 0, 12, 0.231);
-                    }
-                }
-                a {
-                    &:link,
-                    &:visited {
-                        color: $C1;
-                        background-color: $C3a;
-                        border-radius: 50px;
-                        padding-left: 5px;
-                        padding-right: 5px;
-                        text-decoration: none;
-                        transition: padding-left 0.5s;
-                        &:hover {
-                            padding-left: 10px;
-                            padding-right: 10px;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-.programmes{
-    color: $C1;
-    padding-left: 5px;
-    padding-right: 5px;
-    background-color: $C3a;
-    line-height: 150%;
-    padding-bottom: 10px;
+.competences{
+    background-color: $C1;
+    padding: 20px;
     display: flex;
-    flex-direction: column;
-    h2 {
-display: block;
-        border-bottom: 2px $C1 solid;
-        width: 100%;
-        background-color: $C1;
-        border-radius: 0 0 50px 50px;
-        color:$C3;
-        font-weight: bolder;
-        font-size: larger;
-        text-align: center;
-        text-shadow: none;
-padding: 5px 0 5px 0 ;
-    }
-    ul{
-        border:$C2 solid 5px;
-        margin: 0;
-
-    }
-
-        display: flex;
-        top:5px;
-
-        justify-content: center;
-        h3{
-            
-font-size: 1em;
-display: block !important;
-background-color: transparent !important;
-margin:0;
-color: $C1;
-span{
-    background-color: #4c85bd;
-    margin:5px;
-    padding:8px;
-}
-        }
     
-    li {
+    justify-content: space-around; 
+    align-items: stretch; 
+    /* flex-flow: wrap; */  
+    flex-wrap: wrap; 
+    align-content: space-around;
+    height: 100%;
+    padding: 15px;
+    gap: 5px;
+    width:80vw;
+    margin: auto auto;
+div{
+    border: $C2 solid 2px;
+    margin: 10px;
+    h3{
+        padding-left:5px;
+        padding-right:5px;
+        padding-bottom: 5px;
+        margin-top: 0;
+        margin-bottom: 0;
+        background-color: $C2;
         color:$C1;
-        padding: 10px 0 10px 0 ;
-        &:nth-child(2n-1) {
-            background-color: rgba(0, 0, 12, 0.231);
+        &::before{
+            content:"❒ ";
         }
     }
-    a {
-        &:link,
-        &:visited {
-            color: $C1;
-            background-color: $C3a;
-            border-radius: 50px;
-            padding-left: 5px;
-            padding-right: 5px;
-            text-decoration: none;
-            transition: padding-left 0.5s;
-            &:hover {
-                padding-left: 10px;
-                padding-right: 10px;
-            }
-        }
-    }
-}
-
-
-// BG Anim
-
-/* Background data (Original source: https://subtlepatterns.com/grid-me/) */
-
-$bg-url: "../image/bg.png";
-$bg-width: 50px;
-$bg-height: 50px;
-
-/* Animations */
-
-@keyframes bg-scrolling-reverse {
-    100% {
-        background-position: $bg-width $bg-height;
-    }
-}
-
-@keyframes bg-scrolling {
-    0% {
-        background-position: $bg-width $bg-height;
-    }
-}
-
-.inline ul {
-    color: #999;
-    text-align: center;
-    /* img size is 50x50 */
-    background: url($bg-url) repeat 0 0;
-    animation: bg-scrolling-reverse .92s infinite;
-    animation-timing-function: linear;
-    &::before {
-        content: " ";
-        font-size: 8rem;
-        font-weight: 100;
-        font-style: normal;
-    }
-}
-
-// Parcours
-.parcours {
-    .description {
-        border-top: $C3a solid 2px;
-        border-bottom: $C3a solid 2px;
-        box-shadow: $C3a 2px 2px 2px;
-        padding: 20px;
-        text-align: center;
-        color: $C3;
+    span{
         font-weight: bold;
-        background-color: $C1;
-    }
-    a {
-        box-shadow: inset 0 0 0 0 $C2;
-        color: $C2;
-        text-decoration: none;
-        transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-        &:before{
-            content : "\0000A0";
-        }
-        &:after{
-            content : "\0000A0";
-        }
-      &:hover {
-        box-shadow: inset 200px 0 0 0 $C2;
-        color: white;
-      }
-    }}
-    
-    @media screen and (min-width: 1280px) {
-        .parc {
-            display: grid;
-            grid-gap: 20px;
-            grid-template-columns: auto;
-            margin: 15px;
-            article {
-                grid-template-columns: 20vw auto;
-                display: grid;
-                grid-gap: 20px;
-                div {
-                    img {
-                        width: 20vw;
-                        margin: auto auto;
-                        height: 20vw;
-                        display: block;
-                    }
-                    height: 20vw;
-                    &:nth-child(2n) {
-                        height: 20vw;
-                        font-size: 0.9vw;
-                        background-color: #fff;
-                        border: 1px solid rgba(0, 0, 0, .125);
-                        position: relative;
-                        display: -ms-flexbox;
-                        display: flex;
-                        -ms-flex-direction: column;
-                        flex-direction: column;
-                        min-width: 0;
-                        word-wrap: break-word;
-                        background-clip: border-box;
-                        border-radius: .25rem;
-                        p {
-                            padding-left: 10px;
-                            line-height: 150%;
-                        }
-                        h3 {
-                            font-family: 'Open Sans', sans-serif;
-                            padding-left: 5px;
-                        }
-                    }
-                }
-            }
+        padding:15px;
+        &::before{
+            content:"➯ ";
         }
     }
-    @media screen and (max-width: 1280px) {
-        .parc {
-            display: grid;
-            grid-gap: 10px;
-            grid-template-columns: auto;
-            margin: 10px;
-            article {
-                img {
-                    width: 20%;
-                    margin: auto auto;
-                    height: 20%;
-                    display: block;
-                }
-                height: 10%;
-                div {
-                    &:nth-child(2n) {
-                        background-color: #fff;
-                        border: 1px solid rgba(0, 0, 0, .125);
-                        position: relative;
-                        display: -ms-flexbox;
-                        display: flex;
-                        -ms-flex-direction: column;
-                        flex-direction: column;
-                        min-width: 0;
-                        word-wrap: break-word;
-                        background-clip: border-box;
-                        border-bottom-right-radius: .25em;
-                        border-bottom-left-radius: .25em;
-                        p {
-                            padding-left: 10px;
-                            line-height: 150%;
-                        }
-                        h3 {
-                            font-family: 'Open Sans', sans-serif;
-                            font-size: 1.2em;
-                            padding-left: 5px;
-                        }
+    dl{
+        padding:10px;
+        margin:10px;
+        dt{
+            color:$C2;
+        }
+        dd{
+            margin-bottom:10px;
+            ul {
+                list-style-type: none;
+                li{
+                    &::before{
+                        content:"★ "
                     }
                 }
-            }
+              }
         }
     }
-
-
-.copyright {
-    text-align: center;
-    color: $C3;
-font-weight: bolder;
-padding: 20px 0 20px 0;
-background-color: $C1;
-width:98%;
-margin: auto auto;
-font-size: larger;
 }
+}
+
