--- a/assets/css/apps.scss
+++ b/assets/css/apps.scss
@@ -26,6 +26,7 @@ $C3a: #00000c60;
         margin: 10px;
         article {
             height: 200px;
+
             a {
                 display: inline;
                 text-align: center;
@@ -49,6 +50,7 @@ $C3a: #00000c60;
         margin: 10px;
         article {
             height: 220px;
+margin-bottom: 20px;
             a {
                 display: block;
                 text-align: center;
