--- a/assets/css/0.scss
+++ b/assets/css/0.scss
@@ -8,14 +8,22 @@ $C3a: #00000c60;
 
 
 .lien_magique {
-    color: yellow;
-    background-color: $C3;
-    border-radius: 25%;
-    padding:5px;
+background-color: $C1;
+  color: $C3;
+  padding: 10px;
+  margin: 2px;
+  text-decoration: none;
+  border-radius: 10px;
+  border: $C3a 2px solid;
+  transition: all 0.5s;
     &:hover {
-        color: yellow;
+        color: $C2;
         text-decoration: none;
-        text-shadow: 0px 0px 1px rgba(95, 81, 81, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow !important;
+        font-size: large;
+        margin: 5px;
+        padding: 12px;
+        box-shadow: 0px 0px 1px rgba(95, 81, 81, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow !important;
+        background-color: lightgray;
     }
 }
 
@@ -29,4 +37,8 @@ background-color: $C1;
 width:98%;
 margin: auto auto;
 font-size: larger;
+}
+
+sup{
+cursor: help;
 }
