--- a/assets/css/apps.scss
+++ b/assets/css/apps.scss
@@ -66,6 +66,7 @@ margin-bottom: 20px;
 }
 
 .appsview {
+    padding:5px;
     article {
         background: linear-gradient(180deg, $C3a 0%, $C1 17%, $C1 18%, $C1 100%);
         h3 {
